elearningProject/force-app/main/default/objects/Unit__c/fields/Challenge_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Instructions__c</fullName>
    <label>Challenge Instructions</label>
    <length>1800</length>
    <type>LongTextArea</type>
</CustomField>