elearningProject/force-app/main/default/objects/Unit__c/fields/Estimated_time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_time__c</fullName>
    <description>Estimated time in minutes</description>
    <label>Estimated time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>