elearningProject/force-app/main/default/objects/Unit__c/fields/Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Score__c</fullName>
    <label>Max Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>