elearningProject/force-app/main/default/objects/Unit__c/fields/Num_of_Questions__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Questions__c</fullName>
    <description>The number of questions related to this Unit (only if test_type = &quot;multiple choice&quot;)</description>
    <label>Num of Questions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>