elearningProject/force-app/main/default/objects/Unit__c/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multiple Choice</fullName>
            </value>
            <value>
                <fullName>Hands On Challenge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>